--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 .logo-circle {
   background: #f24a92;
-  background-image: url( img/logo.svg );
+  background-image: url( img/logo-register.svg );
   width: 70px;
   height: 70px;
   border-radius: 50%;
