--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,14 @@
     overflow-x: scroll;
     }
 
+    .main-nav {
+    overflow: -moz-scrollbars-none; /* Для Firefox */
+    -ms-overflow-style: none; /* Для Internet Explorer и Edge */
+    scrollbar-width: none; /* Для Firefox */
+    }
+    
     .main-nav::-webkit-scrollbar {
-        display: none;
+        display: none; /* Для Chrome, Safari и Opera */
     }
     .main-nav a {
     color: var(--nav-link);
